# rust-social-network

./: .dockerignore  .editorconfig  Cargo.toml  LICENSE  README.md  main.rs
.docker/: Dockerfile
cli/: migrate.rs  mod.rs  seed.rs  serve.rs
deployment/: docker-compose.yml
lib/: Cargo.toml
lib/cache/: Cargo.toml
lib/cache/src/: lib.rs
lib/database/: Cargo.toml
lib/database/src/: lib.rs
lib/jwt/: Cargo.toml
lib/jwt/src/: lib.rs
lib/utils/: Cargo.toml
lib/utils/src/: crypto.rs  lib.rs  time.rs  validation.rs
migrations/2025-09-02-175611_add_post_table/: down.sql  up.sql
migrations/2025-09-02-180155_add_user_table/: down.sql  up.sql
migrations/2025-09-02-180250_add_comment_table/: up.sql
src/: lib.rs
src/api/: handlers.rs  mod.rs  routes.rs
src/entity/: comment.rs  mod.rs  post.rs  user.rs
src/repository/: comment_repository.rs  mod.rs  post_repository.rs  user_repository.rs
src/service/: comment_service.rs  mod.rs  post_service.rs  user_service.rs
src/usecase/: comment_usecase.rs  mod.rs  post_usecase.rs  user_usecase.rs
