[package]
name = "rust-social-network"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["lib/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
description = "Shared utilities for Rust Social Network"
license = "MIT"
repository = "https://github.com/yourusername/rust-social-network"
keywords = ["social", "network", "rust"]
categories = ["web-programming", "api-bindings"]

[[bin]]
name = "rust-social-network"
path = "main.rs"

[dependencies]
argon2 = "0.5.3"
axum = "0.8.4"
clap = { version = "4.4", features = ["derive"] }
jsonwebtoken = "9.3.1"
regex = "1.0"
serde = { version = "1.0.219", features = ["derive", "rc", "serde_derive"] }
tokio = { version = "1.47.1", features = ["full"] }
cache = { path = "lib/cache" }
jwt = { path = "lib/jwt" }
database = { path = "lib/database" }
utils = { path = "lib/utils" }
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
