[package]
name = "cache"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Caching utilities for Rust Social Network"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
tokio = { version = "1.47", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
