[package]
name = "database"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Database utilities for Rust Social Network"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
anyhow = "1.0"
tracing = "0.1"
tokio = { version = "1.47", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
